# shellcraft

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  run.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_persistence.py  0002_certificates.py
backend/app/: __init__.py  engine.py  lab_checker.py  labs_registry.py  main.py  sandbox.py  terminal_ws.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  certificate_signing.py  config.py  password_policy.py  security.py
backend/app/db/: __init__.py  base.py  redis.py  session.py
backend/app/labs/: lab-01.json  lab-02.json  lab-03.json  lab-04.json  lab-05.json
backend/app/models/: __init__.py  certificate.py  progress.py  settings.py  user.py
backend/app/repositories/: __init__.py  certificate_repo.py  progress_repo.py  settings_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  base.py  certificate.py  progress.py  settings.py  user.py
backend/app/services/: __init__.py  auth_service.py  certificate_service.py  (+2 more)
backend/docs/: README.md  architecture.md  best-practices.md
backend/sandbox/: Dockerfile
backend/tests/: conftest.py  test_api.py  test_auth.py  test_certificates.py  test_lab_checker.py  test_password_policy.py  test_progress.py  test_progress_gating.py  test_sandbox.py  test_sandbox_cleanup.py  test_sandbox_history.py  test_settings.py  test_terminal_ws.py
(+172 files in other folders)
