[project]
name = "shellcraft-backend"
version = "0.1.0"
description = "ShellCraft FastAPI service — labs and safe command checking"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify, bandit(S)
select = ["E", "F", "I", "B", "C4", "UP", "SIM", "S"]
ignore = ["S101"]  # asserts are fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
